# django_project_template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  env_template  prod_command.sh  pyproject.toml
src/: pytest.ini
src/config/: settings.py  urls.py
src/config/templates/: base.html
src/config/templates/account/: email.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  pre_login_base.html  signup.html
